--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.5.8",
-    "jest": "^29.7.0",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "commander": "^14.0.2",
     "ts-node": "^10.9.1"
   }
 }
