--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     // "baseUrl": "./", // Lets you set a base directory to resolve non-absolute module names.
     "esModuleInterop": true, // fixes some issues TS originally had with the ES6 spec where TypeScript treats CommonJS/AMD/UMD modules similar to ES6 module
     "moduleResolution": "node", // Pretty much always node for modern JS. Other option is "classic"
+    "ignoreDeprecations": "6.0", // silence deprecation warnings for TS 6.x as suggested by the compiler
     "paths": {}, // A series of entries which re-map imports to lookup locations relative to the baseUrl
     // Source Map
     "sourceMap": true, // enables the use of source maps for debuggers and error reporting etc
