--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "kata-clean-architecture",
   "version": "1.0.0",
+  "license": "MIT",
   "description": "kata-clean-architecture",
   "main": "index.js",
+  "author": "",
+  "keywords": [],
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverage",
-    "dev": "ts-node index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+    "dev": "ts-node index.ts",
+    "build": "yarn tsc"
+  }, 
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "commander": "^14.0.2",
+    "figlet": "^1.9.4",
     "ts-node": "^10.9.1"
   }
 }
