--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test:coverage": "jest --collectCoverage",
     "dev": "ts-node index.ts",
     "build": "yarn tsc"
-  }, 
+  },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "jest": "^30.2.0",
@@ -20,8 +20,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "commander": "^14.0.2",
     "figlet": "^1.9.4",
+    "promptly": "^3.2.0",
     "ts-node": "^10.9.1"
   }
 }
