--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
+    "@types/promptly": "^3.0.5",
     "jest": "^30.2.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
